--- a/src/main/resources/templates/enrollment-list.html
+++ b/src/main/resources/templates/enrollment-list.html
@@ -29,16 +29,16 @@
       <td th:text="${enrollment.student.firstName} + ' ' + ${enrollment.student.lastName}"></td>
       <td th:text="${enrollment.program.programName}"></td>
       <td th:text="${enrollment.startDate}"></td>
-      <td th:text="${enrollment.amountPaid}"></td>
+      <td th:text="${enrollment.program.fee}"></td>
       <td th:text="${enrollment.status}"></td>
-<!--      <td>-->
+      <td>
 <!--        <a th:href="@{'/enrollments/' + ${enrollment.applicationNo}}">View</a>-->
 <!--        <a th:href="@{'/enrollments/edit/' + ${enrollment.applicationNo}}">Edit</a>-->
-<!--        <a th:href="@{'/enrollments/delete/' + ${enrollment.applicationNo}}"-->
-<!--           onclick="return confirm('Are you sure you want to delete this enrollment?');">-->
-<!--          Delete-->
-<!--        </a>-->
-<!--      </td>-->
+        <a th:href="@{'/enrollments/delete/' + ${enrollment.applicationNo}}"
+           onclick="return confirm('Are you sure you want to delete this enrollment?');">
+          Delete
+        </a>
+      </td>
     </tr>
     </tbody>
   </table>
